FEAT: 복수개 인자로 db 검색